samples/_failures_safe/1761293367_6647d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_672fdb62.c: In function ‘main’:
./samples/SAFE/__tmp_672fdb62.c:151:17: error: expected declaration or statement at end of input
  151 |                 }
      |                 ^
./samples/SAFE/__tmp_672fdb62.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_672fdb62.c:151:17: error: expected declaration or statement at end of input
